codex-rs/core/tests/suite/snapshots/all__suite__model_visible_layout__model_visible_layout_turn_overrides.snap
---
source: core/tests/suite/model_visible_layout.rs
expression: "format_labeled_requests_snapshot(\"Second turn changes cwd, approval policy, and personality while keeping model constant.\",\n&[(\"First Request (Baseline)\", &requests[0]),\n(\"Second Request (Turn Overrides)\", &requests[1]),])"
---
Scenario: Second turn changes cwd, approval policy, and personality while keeping model constant.

## First Request (Baseline)
00:message/developer[3]:
    [01] # You are the Root Agent\n\nYou are the **root agent** in a multi-agent Codex session. Until you...
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first turn

## Second Request (Turn Overrides)
00:message/developer[3]:
    [01] # You are the Root Agent\n\nYou are the **root agent** in a multi-agent Codex session. Until you...
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <SKILLS_INSTRUCTIONS>
01:message/user:<ENVIRONMENT_CONTEXT:cwd=<CWD>>
02:message/user:first turn
03:message/assistant:turn one complete
04:message/developer[2]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <personality_spec> The user has requested a new communication style. Future messages should adhe...
05:message/user:<ENVIRONMENT_CONTEXT:cwd=PRETURN_CONTEXT_DIFF_CWD>
06:message/user:second turn with context updates
